--- a/app/src/main/res/layout/bio.xml
+++ b/app/src/main/res/layout/bio.xml
@@ -23,52 +23,8 @@
         android:gravity="center" />
 
     <!-- Profile Picture Container -->
-    <RelativeLayout
-        android:id="@+id/profilePictureContainer"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@id/bioHeader"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-
-        <!-- Profile Picture -->
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/user_profile_image"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/profile_picture"
-            android:background="@drawable/profile_picture_background"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?attr/selectableItemBackgroundBorderless" />
-
-        <!-- Camera Icon Overlay -->
-        <ImageView
-            android:id="@+id/cameraIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_camera"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="4dp"
-            android:contentDescription="@string/camera_icon" />
-    </RelativeLayout>
 
     <!-- Hint for Profile Picture -->
-    <TextView
-        android:id="@+id/profileImageHint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tap_to_change_profile_picture"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/profilePictureContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
 
     <!-- Name Field -->
     <TextView
@@ -76,10 +32,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textSize="14sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/profileImageHint"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="189dp" />
 
     <EditText
         android:id="@+id/nameField"
